cambios en navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <nav>
+            <img class="imgNav" src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg">
             <a href="./pages/estudios.html">Estudios</a>
             <a href="./pages/herramientas.html">Herramientas</a>
             <a href="./pages/experiencia.html">Experiencia</a>
