--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -143,6 +143,7 @@
     </section>
     <footer>
       <nav>
+        <a href="#">Volver arriba</a>
         <a href="/">Home</a>
       </nav>
     </footer>
