--- a/pages/about.html
+++ b/pages/about.html
@@ -24,6 +24,7 @@
         src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
       />
       <div class="fondoParaParrafo">
+        <h1>Sobre mi</h1>
         <p class="descripcion">
           Doy clases particulares desde 2014 para el instituto Clases del Norte.
           Específicamente en las materias matemática, física, química y
@@ -47,6 +48,7 @@
     </section>
     <footer>
       <nav>
+        <a href="#">Volver arriba</a>
         <a href="/">Home</a>
       </nav>
     </footer>
