--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -52,6 +52,7 @@
     </section>
     <footer>
       <nav>
+        <a href="#">Volver arriba</a>
         <a href="/">Home</a>
       </nav>
     </footer>
