cambio de rutas a  home

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- hacer "contacto" y otra mas responsive -->
 <!-- agregar footer en pag secundarias -->
  <!-- certificados con sliders de bootstrap? -->
+  <!-- ruta home en github pages -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
