--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -22,7 +22,7 @@
             src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
           />
 
-          <a class="navbar-brand fw-bold" href="/">Mariana Padelin</a>
+          <a class="navbar-brand fw-bold" href="../index.html">Mariana Padelin</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -37,7 +37,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link link-light" href="/"
+                <a class="nav-link link-light" href="../index.html"
                   >Home</a
                 >
               </li>
@@ -79,7 +79,7 @@
             <a href="#">Arriba</a>
           </button>
           <button class="btn btn-dark"> 
-            <a href="/">Home</a>
+            <a href="../index.html">Home</a>
           </button>
         </div>
         <h2>PROYECTO FREELANCE - UCHI</h2>
