--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -24,7 +24,7 @@
             src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
           />
 
-          <a class="navbar-brand fw-bold" href="/">Mariana Padelin</a>
+          <a class="navbar-brand fw-bold" href="../index.html">Mariana Padelin</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link link-light" href="/"
+                <a class="nav-link link-light" href="../index.html"
                   >Home</a
                 >
               </li>
@@ -81,7 +81,7 @@
             <a href="#">Arriba</a>
           </button>
           <button class="btn btn-dark"> 
-            <a href="/">Home</a>
+            <a href="../index.html">Home</a>
           </button>
         </div>
         <img
