footer, titulos y botones

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<!-- hacer "contacto" y otra mas responsive -->
-<!-- agregar footer en pag secundarias -->
- <!-- certificados con sliders de bootstrap? -->
-  <!-- ruta home en github pages -->
+  <!-- revisar que las etiquetas sean claras -->
+<!-- revisar los breakpoints -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -61,7 +59,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link link-light" href="./contacto.html">
+                <a class="nav-link link-light" href="./pages/contacto.html">
                   Contacto</a
                 >
               </li>
