--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Experiencia</title>
     <link rel="stylesheet" href="../style.css" />
-      <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -22,7 +22,9 @@
             src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
           />
 
-          <a class="navbar-brand fw-bold" href="../index.html">Mariana Padelin</a>
+          <a class="navbar-brand fw-bold" href="../index.html"
+            >Mariana Padelin</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -37,9 +39,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link link-light" href="../index.html"
-                  >Home</a
-                >
+                <a class="nav-link link-light" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link link-light" href="./estudios.html"
@@ -57,9 +57,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link link-light" href="./about.html"
-                  >Sobre mi</a
-                >
+                <a class="nav-link link-light" href="./about.html">Sobre mi</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link link-light" href="./contacto.html">
@@ -75,61 +73,70 @@
     <main>
       <section class="secciones">
         <div class="btnSide">
-          <button class="btn btn-dark"> 
+          <button class="btn btn-dark">
             <a href="#">Arriba</a>
           </button>
-          <button class="btn btn-dark"> 
+          <button class="btn btn-dark">
             <a href="../index.html">Home</a>
           </button>
         </div>
-        <h2>PROYECTO FREELANCE - UCHI</h2>
+        <h2 class="text-white fw-light text-center m-3">
+          PROYECTO FREELANCE - UCHI
+        </h2>
         <div class="fondoParaParrafo">
           <p class="descripcion">
             Trabajo freelance de front end realizado como única desarrolladora
             web, en conjunto con diseñadores y UX/UI. A partir de terminar el
             curso de React JS con la mejor calificación, desde Coderhouse me
-            permitieron participar de este proyecto con un equipo de diseñadores.
-            Página web realizada desde cero, responsive, en concordancia con los
-            pedidos de nuestra cliente, la dueña de la marca UCHI.
+            permitieron participar de este proyecto con un equipo de
+            diseñadores. Página web realizada desde cero, responsive, en
+            concordancia con los pedidos de nuestra cliente, la dueña de la
+            marca UCHI.
           </p>
         </div>
 
-        <h3>A continuación se muestra un screenshot de la landing page:</h3>
+        <h3 class="text-white fw-light text-center m-3">
+          A continuación se muestra un screenshot de la landing page:
+        </h3>
         <img
           class="capturas"
           alt="Cauptura de página web UCHI"
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716732753/screencapture-uchi-three-vercel-app-2024-05-26-11_11_58_d8auuv.png"
         />
-        <button class="botones">
+        <button class="btn btn-dark">
           <a href="https://uchi-three.vercel.app/" target="_blank">
             Visitar la página
           </a>
         </button>
-        <button class="botones">
+        <button class="btn btn-dark">
           <a href="https://github.com/MarianaPadelin/uchi.git" target="_blank">
             Ver el código
           </a>
         </button>
 
-        <h2>PROYECTO E-COMMERCE FULLSTACK - MGGM</h2>
+        <h2 class="text-white fw-light text-center m-3">
+          PROYECTO E-COMMERCE FULLSTACK - MGGM
+        </h2>
         <div class="fondoParaParrafo">
           <p class="descripcion">
             Trabajo de e-commerce realizado en primera instancia como proyecto
-            final del curso React JS en coderhouse. Luego retomado en el curso de
-            Backend en coderhouse, agregándole inicio de sesión, permisos para
-            administrador, funcionalidad con API REST propia, chat en vivo,
+            final del curso React JS en coderhouse. Luego retomado en el curso
+            de Backend en coderhouse, agregándole inicio de sesión, permisos
+            para administrador, funcionalidad con API REST propia, chat en vivo,
             proceso de compra completo. Sistema de envío de mails para tickets y
             notificaciones, etc.
           </p>
         </div>
 
-        <h3>A continuación se muestra un screenshot de la landing page:</h3>
+        <h3 class="text-white fw-light text-center m-3">
+          A continuación se muestra un screenshot de la landing page:
+        </h3>
         <img
           class="capturas"
           alt="Captura de página web MGGM"
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716750307/screencapture-proyectofinalfrontend-production-b4ee-up-railway-app-2024-05-26-16_04_06_qw0i2m.png"
         />
-        <button class="botones">
+        <button class="btn btn-dark">
           <a
             href="https://github.com/MarianaPadelin/ProyectoFinalFrontend.git"
             target="_blank"
@@ -137,7 +144,7 @@
             Ver el código de frontend</a
           >
         </button>
-        <button class="botones">
+        <button class="btn btn-dark">
           <a
             href="https://github.com/MarianaPadelin/ProyectoFinalBackend.git"
             target="_blank"
@@ -147,7 +154,11 @@
         </button>
       </section>
     </main>
-   
+    <footer class="bg-info-subtle p-3 mt-1">
+      <div class="text-primary-emphasi text-center">
+        Mariana padelin +541111-1111 mail@gmail.com
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
