--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre mi</title>
     <link rel="stylesheet" href="../style.css" />
-      <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -14,7 +14,7 @@
   </head>
   <body class="bg-secondary bg-gradient text-center">
     <header>
-     <nav class="navbar navbar-expand-lg mt-3">
+      <nav class="navbar navbar-expand-lg mt-3">
         <div class="container-fluid">
           <img
             class="imgNav"
@@ -22,7 +22,9 @@
             src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
           />
 
-          <a class="navbar-brand fw-bold" href="../index.html">Mariana Padelin</a>
+          <a class="navbar-brand fw-bold" href="../index.html"
+            >Mariana Padelin</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -37,9 +39,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link link-light" href="../index.html"
-                  >Home</a
-                >
+                <a class="nav-link link-light" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link link-light" href="./estudios.html"
@@ -57,9 +57,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link link-light" href="./about.html"
-                  >Sobre mi</a
-                >
+                <a class="nav-link link-light" href="./about.html">Sobre mi</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link link-light" href="./contacto.html">
@@ -75,10 +73,10 @@
     <main>
       <section class="secciones">
         <div class="btnSide">
-          <button class="btn btn-dark"> 
+          <button class="btn btn-dark">
             <a href="#">Arriba</a>
           </button>
-          <button class="btn btn-dark"> 
+          <button class="btn btn-dark">
             <a href="../index.html">Home</a>
           </button>
         </div>
@@ -88,7 +86,7 @@
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
         />
         <div class="fondoParaParrafo">
-          <h1>Sobre mi</h1>
+          <h1 class="fw-light">Sobre mi</h1>
           <p class="descripcion">
             Doy clases particulares desde 2014 para el instituto Clases del
             Norte. Específicamente en las materias matemática, física, química y
@@ -113,7 +111,11 @@
       </section>
     </main>
 
-  
+    <footer class="bg-info-subtle p-3 mt-1">
+      <div class="text-primary-emphasi text-center">
+        Mariana padelin +541111-1111 mail@gmail.com
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
