--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Estudios</title>
     <link rel="stylesheet" href="../style.css" />
-      <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
   </head>
-  
-  
+
   <body class="bg-secondary bg-gradient">
     <header>
       <nav class="navbar navbar-expand-lg mt-3">
@@ -24,7 +23,9 @@
             src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
           />
 
-          <a class="navbar-brand fw-bold" href="../index.html">Mariana Padelin</a>
+          <a class="navbar-brand fw-bold" href="../index.html"
+            >Mariana Padelin</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -39,9 +40,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link link-light" href="../index.html"
-                  >Home</a
-                >
+                <a class="nav-link link-light" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link link-light" href="./estudios.html"
@@ -59,9 +58,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link link-light" href="./about.html"
-                  >Sobre mi</a
-                >
+                <a class="nav-link link-light" href="./about.html">Sobre mi</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link link-light" href="./contacto.html">
@@ -75,49 +72,77 @@
     </header>
 
     <main>
-      <section class="secciones">
-        <div class="btnSide">
-          <button class="btn btn-dark"> 
-            <a href="#">Arriba</a>
-          </button>
-          <button class="btn btn-dark"> 
-            <a href="../index.html">Home</a>
-          </button>
+      <h1 class="text-white fw-light text-center m-3">Estos son los certificados obtenidos hasta la fecha</h1>
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302673/certificados/663248d96a0b85d346f657d1_1_gegddt.png"
+              class="d-block w-100"
+              alt="Certificado backend"
+              title="Certificado backend"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              alt="Certificado Javascript"
+              title="Certificado Javascript"
+              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302714/certificados/64b10cd921cc7b0002d16d73_n97twl.png"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              alt="Certificado React JS"
+              title="Certificado React JS"
+              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302706/certificados/6453725464a952000263adbc_mpmrvh.png"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              alt="Certificado SQL"
+              title="Certificado SQL"
+              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1721164551/certificados/Certificado_sql_meigso.png"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              alt="Certificado Fullstack"
+              title="Certificado Fullstack"
+              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716303789/certificados/Captura_de_pantalla_2024-05-21_120236_tbm88z.png"
+            />
+          </div>
         </div>
-        <img
-          class="capturas"
-          alt="Certificado backend"
-          title="Certificado backend"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302673/certificados/663248d96a0b85d346f657d1_1_gegddt.png"
-        />
-        <img
-          class="capturas"
-          alt="Certificado Javascript"
-          title="Certificado Javascript"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302714/certificados/64b10cd921cc7b0002d16d73_n97twl.png"
-        />
-        <img
-          class="capturas"
-          alt="Certificado React JS"
-          title="Certificado React JS"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302706/certificados/6453725464a952000263adbc_mpmrvh.png"
-        />
-        <img
-          class="capturas"
-          alt="Certificado SQL"
-          title="Certificado SQL"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1721164551/certificados/Certificado_sql_meigso.png"
-        />
-        <img
-          class="capturas"
-          alt="Certificado Fullstack"
-          title="Certificado Fullstack"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716303789/certificados/Captura_de_pantalla_2024-05-21_120236_tbm88z.png"
-        />
-      </section>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+     
     </main>
+    <footer class="bg-info-subtle p-3 mt-1">
+      <div class="text-primary-emphasi text-center">
+        Mariana padelin +541111-1111 mail@gmail.com
+      </div>
+    </footer>
 
-   
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
