--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Herramientas</title>
     <link rel="stylesheet" href="../style.css" />
-      <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -14,7 +14,7 @@
   </head>
   <body class="bg-secondary bg-gradient">
     <header>
-       <nav class="navbar navbar-expand-lg mt-3">
+      <nav class="navbar navbar-expand-lg mt-3">
         <div class="container-fluid">
           <img
             class="imgNav"
@@ -22,7 +22,9 @@
             src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
           />
 
-          <a class="navbar-brand fw-bold" href="../index.html">Mariana Padelin</a>
+          <a class="navbar-brand fw-bold" href="../index.html"
+            >Mariana Padelin</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -37,9 +39,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link link-light" href="../index.html"
-                  >Home</a
-                >
+                <a class="nav-link link-light" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link link-light" href="./estudios.html"
@@ -57,9 +57,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link link-light" href="./about.html"
-                  >Sobre mi</a
-                >
+                <a class="nav-link link-light" href="./about.html">Sobre mi</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link link-light" href="./contacto.html">
@@ -73,141 +71,147 @@
     </header>
 
     <main>
- <section class="text-center text-white bg-dark bg-gradient pt-3">
-      <h1>Estas son las herramientas que manejo</h1>
-      <div class="btnSide">
-        <button class="btn btn-dark"> 
-          <a href="#">Arriba</a>
-        </button>
-        <button class="btn btn-dark"> 
-          <a href="../index.html">Home</a>
-        </button>
-      </div>
-      
-      <h2>Básicos</h2>
-      <img
-        class="iconos"
-        alt="HTML 5"
-        title="HTML 5"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716573808/iconos%20tools/html_zymjen.png"
-      />
-      <img
-        class="iconos"
-        alt="Javascript"
-        title="Javascript"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748365/iconos%20tools/javascript_icon_130900_b7yysi.png"
-      />
-      <img
-        class="iconos"
-        alt="Github"
-        title="Github"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748449/iconos%20tools/github_git_icon_145985_vfzldz.png"
-      />
-      <img
-        class="iconos"
-        alt="React JS"
-        title="React JS"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748497/iconos%20tools/react_original_logo_icon_146374_bm5lgl.png"
-      />
-      <h2>Backend</h2>
-      <img
-        class="iconos"
-        alt="Node JS"
-        title="Node JS"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748594/iconos%20tools/file_type_node_icon_130301_swtdjd.png"
-      />
-      <img
-        class="iconos"
-        alt="Postman"
-        title="Postman"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748702/iconos%20tools/postman_macos_bigsur_icon_189815_hua9th.png"
-      />
-      <img
-        class="iconos"
-        alt="Express"
-        title="Express"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748973/iconos%20tools/express_nrck6e.png"
-      />
-      <img
-        class="iconos"
-        alt="Websockets"
-        title="Websockets"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749257/iconos%20tools/pngwing.com_ffhzyy.png"
-      />
-      <h2>Bases de datos</h2>
-      <img
-        class="iconos"
-        alt="Mongo DB"
-        title="Mongo DB"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749967/iconos%20tools/pngwing.com_4_vhflc8.png"
-      />
-      <img
-        class="iconos"
-        alt="Firebase"
-        title="Firebase"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716750053/iconos%20tools/pngwing.com_5_losolw.png"
-      />
-      <img
-        class="iconos"
-        alt="MySQL"
-        title="MySQL"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1721224355/iconos%20tools/mysql_wwybe7.png"
-      />
-      <h2>Estilos</h2>
-      <img
-        class="iconos"
-        alt="CSS"
-        title="CSS"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748251/iconos%20tools/4202020css3htmllogosocialsocialmedia-115668_115633_uczfkc.png"
-      />
-      <img
-        class="iconos"
-        alt="Bootstrap"
-        title="Bootstrap"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749371/iconos%20tools/pngegg_c1elui.png"
-      />
-      <img
-        class="iconos"
-        alt="React Bootstrap"
-        title="React Bootstrap"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749490/iconos%20tools/kisspng-bootstrap-react-software-framework-javascript-fron-5b0f9b1ae420f1.5052388715277494029344_kuc0w9.png"
-      />
-      <img
-        class="iconos"
-        alt="MUI material"
-        title="MUI material"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749990/iconos%20tools/pngwing.com_3_po0gnz.png"
-      />
-      <h2>Deploys</h2>
-      <img
-        class="iconos"
-        alt="Railway"
-        title="Railway"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716573796/iconos%20tools/railway_ni9cgm.png"
-      />
-      <img
-        class="iconos"
-        alt="Vercel"
-        title="Vercel"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716573799/iconos%20tools/vercel_uvbqin.png"
-      />
-      <h2>Documentación</h2>
-      <img
-        class="iconos"
-        alt="Swagger"
-        title="Swagger"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716573798/iconos%20tools/swagger_hwahlu.png"
-      />
-      <h2>Plataformas de pago</h2>
-      <img
-        class="iconos"
-        alt="Stripe"
-        title="Stipe"
-        src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716747657/iconos%20tools/1685814539stripe-icon-png_fhw5lq.png"
-      />
-    </section>
+      <section class="text-center text-white bg-dark bg-gradient py-3">
+        <h1 class="text-white fw-light text-center m-3">
+          Estas son las herramientas que manejo
+        </h1>
+        <div class="btnSide">
+          <button class="btn btn-dark">
+            <a href="#">Arriba</a>
+          </button>
+          <button class="btn btn-dark">
+            <a href="../index.html">Home</a>
+          </button>
+        </div>
+
+        <h4 class="fw-bold fst-italic m-3">Básicos</h4>
+        <img
+          class="iconos"
+          alt="HTML 5"
+          title="HTML 5"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716573808/iconos%20tools/html_zymjen.png"
+        />
+        <img
+          class="iconos"
+          alt="Javascript"
+          title="Javascript"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748365/iconos%20tools/javascript_icon_130900_b7yysi.png"
+        />
+        <img
+          class="iconos"
+          alt="Github"
+          title="Github"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748449/iconos%20tools/github_git_icon_145985_vfzldz.png"
+        />
+        <img
+          class="iconos"
+          alt="React JS"
+          title="React JS"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748497/iconos%20tools/react_original_logo_icon_146374_bm5lgl.png"
+        />
+        <h4 class="fw-bold fst-italic m-3">Backend</h4>
+        <img
+          class="iconos"
+          alt="Node JS"
+          title="Node JS"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748594/iconos%20tools/file_type_node_icon_130301_swtdjd.png"
+        />
+        <img
+          class="iconos"
+          alt="Postman"
+          title="Postman"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748702/iconos%20tools/postman_macos_bigsur_icon_189815_hua9th.png"
+        />
+        <img
+          class="iconos"
+          alt="Express"
+          title="Express"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748973/iconos%20tools/express_nrck6e.png"
+        />
+        <img
+          class="iconos"
+          alt="Websockets"
+          title="Websockets"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749257/iconos%20tools/pngwing.com_ffhzyy.png"
+        />
+        <h4 class="fw-bold fst-italic m-3">Bases de datos</h4>
+        <img
+          class="iconos"
+          alt="Mongo DB"
+          title="Mongo DB"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749967/iconos%20tools/pngwing.com_4_vhflc8.png"
+        />
+        <img
+          class="iconos"
+          alt="Firebase"
+          title="Firebase"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716750053/iconos%20tools/pngwing.com_5_losolw.png"
+        />
+        <img
+          class="iconos"
+          alt="MySQL"
+          title="MySQL"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1721224355/iconos%20tools/mysql_wwybe7.png"
+        />
+        <h4 class="fw-bold fst-italic m-3">Estilos</h4>
+        <img
+          class="iconos"
+          alt="CSS"
+          title="CSS"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748251/iconos%20tools/4202020css3htmllogosocialsocialmedia-115668_115633_uczfkc.png"
+        />
+        <img
+          class="iconos"
+          alt="Bootstrap"
+          title="Bootstrap"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749371/iconos%20tools/pngegg_c1elui.png"
+        />
+        <img
+          class="iconos"
+          alt="React Bootstrap"
+          title="React Bootstrap"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749490/iconos%20tools/kisspng-bootstrap-react-software-framework-javascript-fron-5b0f9b1ae420f1.5052388715277494029344_kuc0w9.png"
+        />
+        <img
+          class="iconos"
+          alt="MUI material"
+          title="MUI material"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749990/iconos%20tools/pngwing.com_3_po0gnz.png"
+        />
+        <h4 class="fw-bold fst-italic m-3">Deploys</h4>
+        <img
+          class="iconos"
+          alt="Railway"
+          title="Railway"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716573796/iconos%20tools/railway_ni9cgm.png"
+        />
+        <img
+          class="iconos"
+          alt="Vercel"
+          title="Vercel"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716573799/iconos%20tools/vercel_uvbqin.png"
+        />
+        <h4 class="fw-bold fst-italic m-3">Documentación</h4>
+        <img
+          class="iconos"
+          alt="Swagger"
+          title="Swagger"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716573798/iconos%20tools/swagger_hwahlu.png"
+        />
+        <h4 class="fw-bold fst-italic m-3">Plataformas de pago</h4>
+        <img
+          class="iconos"
+          alt="Stripe"
+          title="Stipe"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716747657/iconos%20tools/1685814539stripe-icon-png_fhw5lq.png"
+        />
+      </section>
     </main>
-   
+    <footer class="bg-info-subtle p-3 mt-1">
+      <div class="text-primary-emphasi text-center">
+        Mariana padelin +541111-1111 mail@gmail.com
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
