--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -73,7 +73,8 @@
 
     <main>
       <h1 class="text-white fw-light text-center m-3">Estos son los certificados obtenidos hasta la fecha</h1>
-      <div id="carouselExample" class="carousel slide">
+      <div class="d-flex justify-content-center">
+         <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
@@ -135,6 +136,8 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      </div>
+     
      
     </main>
     <footer class="bg-info-subtle p-3 mt-1">
