--- a/pages/about.html
+++ b/pages/about.html
@@ -87,7 +87,7 @@
         />
         <div class="fondoParaParrafo">
           <h1 class="fw-light">Sobre mi</h1>
-          <p class="descripcion">
+          <p class="parrafoDescriptivo">
             Doy clases particulares desde 2014 para el instituto Clases del
             Norte. Específicamente en las materias matemática, física, química y
             biología. Para ingresos universitarios, CBC y nivel secundario.
@@ -112,7 +112,7 @@
     </main>
 
     <footer class="bg-info-subtle p-3 mt-1">
-      <div class="text-primary-emphasi text-center">
+      <div class="text-primary-emphasis text-center">
         Mariana padelin +541111-1111 mail@gmail.com
       </div>
     </footer>
