--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,7 +73,7 @@
     </header>
 
     <main>
-      <section class="presentacion">
+      <section class="bannerGris">
         <h2>Medios de contacto</h2>
         <hr />
         <p>
