--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -84,7 +84,7 @@
           PROYECTO FREELANCE - UCHI
         </h2>
         <div class="fondoParaParrafo">
-          <p class="descripcion">
+          <p class="parrafoDescriptivo">
             Trabajo freelance de front end realizado como única desarrolladora
             web, en conjunto con diseñadores y UX/UI. A partir de terminar el
             curso de React JS con la mejor calificación, desde Coderhouse me
@@ -118,7 +118,7 @@
           PROYECTO E-COMMERCE FULLSTACK - MGGM
         </h2>
         <div class="fondoParaParrafo">
-          <p class="descripcion">
+          <p class="parrafoDescriptivo">
             Trabajo de e-commerce realizado en primera instancia como proyecto
             final del curso React JS en coderhouse. Luego retomado en el curso
             de Backend en coderhouse, agregándole inicio de sesión, permisos
@@ -144,7 +144,7 @@
             Ver el código de frontend</a
           >
         </button>
-        <button class="btn btn-dark">
+        <button class="btn btn-dark mb-5">
           <a
             href="https://github.com/MarianaPadelin/ProyectoFinalBackend.git"
             target="_blank"
@@ -155,7 +155,7 @@
       </section>
     </main>
     <footer class="bg-info-subtle p-3 mt-1">
-      <div class="text-primary-emphasi text-center">
+      <div class="text-primary-emphasis text-center">
         Mariana padelin +541111-1111 mail@gmail.com
       </div>
     </footer>
