--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-  <!-- revisar que las etiquetas sean claras -->
-<!-- revisar los breakpoints -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -69,7 +67,7 @@
       </nav>
     </header>
     <main>
-      <section class="presentacion">
+      <section class="bannerGris">
         <h1>MARIANA PADELIN</h1>
         <h3 class="fst-italic fw-lighter">Fullstack Developer</h3>
         <div class="mediosContacto">
