--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -141,7 +141,7 @@
      
     </main>
     <footer class="bg-info-subtle p-3 mt-1">
-      <div class="text-primary-emphasi text-center">
+      <div class="text-primary-emphasis text-center">
         Mariana padelin +541111-1111 mail@gmail.com
       </div>
     </footer>
