--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -200,7 +200,7 @@
         />
         <h4 class="fw-bold fst-italic m-3">Plataformas de pago</h4>
         <img
-          class="iconos"
+          class="iconos mb-5"
           alt="Stripe"
           title="Stipe"
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716747657/iconos%20tools/1685814539stripe-icon-png_fhw5lq.png"
