--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,15 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="../img/mobile.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
-    <link rel="stylesheet" href="../style.css" />
-      <link
+
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body class="mainBody">
     <header>
@@ -22,7 +24,9 @@
             src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
           />
 
-          <a class="navbar-brand fw-bold" href="../index.html">Mariana Padelin</a>
+          <a class="navbar-brand fw-bold" href="../index.html"
+            >Mariana Padelin</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -37,9 +41,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link link-light" href="../index.html"
-                  >Home</a
-                >
+                <a class="nav-link link-light" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link link-light" href="./estudios.html"
@@ -57,9 +59,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link link-light" href="./about.html"
-                  >Sobre mi</a
-                >
+                <a class="nav-link link-light" href="./about.html">Sobre mi</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link link-light" href="./contacto.html">
@@ -73,21 +73,23 @@
     </header>
 
     <main>
-      <section class="bannerGris">
+      <section class="bannerGris contactoContainer">
         <h2>Medios de contacto</h2>
         <hr />
         <p>
           <a
             href="https://wa.me/5411111111?text=Buenos días. Vi tu portfolio y estoy interesado en información sobre"
             target="_blank"
+            class="contacto"
           >
-            +54 1111-1111
+            <p class="contacto">+54 1111-1111</p>
           </a>
           <a
             href="https://mail.google.com/mail/?view=cm&to=marianapadelin@gmail.com"
             target="_blank"
+            class="contacto"
           >
-            mail@gmail.com
+            <p class="contacto">mail@gmail.com</p>
           </a>
         </p>
       </section>
