--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -2,15 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="../img/mobile.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Estudios</title>
-    <link rel="stylesheet" href="../style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
 
   <body class="bg-secondary bg-gradient">
@@ -72,73 +74,73 @@
     </header>
 
     <main>
-      <h1 class="text-white fw-light text-center m-3">Estos son los certificados obtenidos hasta la fecha</h1>
+      <h1 class="text-white fw-light text-center m-3">
+        Estos son los certificados obtenidos hasta la fecha
+      </h1>
       <div class="d-flex justify-content-center">
-         <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302673/certificados/663248d96a0b85d346f657d1_1_gegddt.png"
-              class="d-block w-100"
-              alt="Certificado backend"
-              title="Certificado backend"
-            />
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302673/certificados/663248d96a0b85d346f657d1_1_gegddt.png"
+                class="d-block w-100"
+                alt="Certificado backend"
+                title="Certificado backend"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                alt="Certificado Javascript"
+                title="Certificado Javascript"
+                src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302714/certificados/64b10cd921cc7b0002d16d73_n97twl.png"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                alt="Certificado React JS"
+                title="Certificado React JS"
+                src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302706/certificados/6453725464a952000263adbc_mpmrvh.png"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                alt="Certificado SQL"
+                title="Certificado SQL"
+                src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1721164551/certificados/Certificado_sql_meigso.png"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                class="d-block w-100"
+                alt="Certificado Fullstack"
+                title="Certificado Fullstack"
+                src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716303789/certificados/Captura_de_pantalla_2024-05-21_120236_tbm88z.png"
+              />
+            </div>
           </div>
-          <div class="carousel-item">
-            <img
-              class="d-block w-100"
-              alt="Certificado Javascript"
-              title="Certificado Javascript"
-              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302714/certificados/64b10cd921cc7b0002d16d73_n97twl.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              class="d-block w-100"
-              alt="Certificado React JS"
-              title="Certificado React JS"
-              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716302706/certificados/6453725464a952000263adbc_mpmrvh.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              class="d-block w-100"
-              alt="Certificado SQL"
-              title="Certificado SQL"
-              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1721164551/certificados/Certificado_sql_meigso.png"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              class="d-block w-100"
-              alt="Certificado Fullstack"
-              title="Certificado Fullstack"
-              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716303789/certificados/Captura_de_pantalla_2024-05-21_120236_tbm88z.png"
-            />
-          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExample"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExample"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-      </div>
-     
-     
     </main>
     <footer class="bg-info-subtle p-3 mt-1">
       <div class="text-primary-emphasis text-center">
