--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../img/mobile.jpeg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/dvxkjikvk/image/upload/v1725200844/desarrolloWeb/fondos/mobile_pfadb3.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Mariana Padelin</title>
     <link
@@ -10,6 +14,10 @@
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -69,8 +77,14 @@
     </header>
     <main>
       <section class="bannerGris">
-        <h1>MARIANA PADELIN</h1>
-        <h3 class="fst-italic fw-lighter">Fullstack Developer</h3>
+        <h1 class="animate__animated animate__slideInLeft animate__slow">
+          MARIANA PADELIN
+        </h1>
+        <h3
+          class="fst-italic fw-lighter animate__animated animate__fadeIn animate__delay-1s animate__slower"
+        >
+          Fullstack Developer
+        </h3>
         <div class="mediosContacto">
           <button class="btnBanner">
             <a
