--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../img/mobile.jpeg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/dvxkjikvk/image/upload/v1725200844/desarrolloWeb/fondos/mobile_pfadb3.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre mi</title>
 
@@ -88,7 +92,7 @@
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
         />
         <div class="fondoParaParrafo">
-          <h1 class="fw-light">Sobre mi</h1>
+          <h1 class="fw-light titulo">Sobre mi</h1>
           <p class="parrafoDescriptivo">
             Doy clases particulares desde 2014 para el instituto Clases del
             Norte. Específicamente en las materias matemática, física, química y
@@ -107,7 +111,7 @@
         </div>
 
         <img
-          class="capturas"
+          class="capturas cv"
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1721593925/certificados/CV_mayo_2024_nxvata.png"
         />
       </section>
