--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../img/mobile.jpeg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/dvxkjikvk/image/upload/v1725200844/desarrolloWeb/fondos/mobile_pfadb3.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Experiencia</title>
 
@@ -82,7 +86,7 @@
             <a href="../index.html">Home</a>
           </button>
         </div>
-        <h2 class="text-white fw-light text-center m-3">
+        <h2 class="text-white fw-light text-center titulo">
           PROYECTO FREELANCE - UCHI
         </h2>
         <div class="fondoParaParrafo">
@@ -116,7 +120,7 @@
           </a>
         </button>
 
-        <h2 class="text-white fw-light text-center m-3">
+        <h2 class="text-white fw-light text-center titulo">
           PROYECTO E-COMMERCE FULLSTACK - MGGM
         </h2>
         <div class="fondoParaParrafo">
