--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../img/mobile.jpeg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/dvxkjikvk/image/upload/v1725200844/desarrolloWeb/fondos/mobile_pfadb3.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Herramientas</title>
 
@@ -74,7 +78,7 @@
 
     <main>
       <section class="text-center text-white bg-dark bg-gradient py-3">
-        <h1 class="text-white fw-light text-center m-3">
+        <h1 class="text-white fw-light text-center titulo">
           Estas son las herramientas que manejo
         </h1>
         <div class="btnSide">
