--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../img/mobile.jpeg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/dvxkjikvk/image/upload/v1725200844/desarrolloWeb/fondos/mobile_pfadb3.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
 
