--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,14 +86,14 @@
             target="_blank"
             class="contacto"
           >
-            <p class="contacto">+54 1111-1111</p>
+            <p>+54 1111-1111</p>
           </a>
           <a
             href="https://mail.google.com/mail/?view=cm&to=marianapadelin@gmail.com"
             target="_blank"
             class="contacto"
           >
-            <p class="contacto">mail@gmail.com</p>
+            <p>mail@gmail.com</p>
           </a>
         </p>
       </section>
