inicio proyecto final

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body class="mainBody">
     <header>
-      <nav class="navbar navbar-expand-lg mt-3">
+      <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
           <img
             class="imgNav"
