--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -21,7 +21,7 @@
 
   <body class="bg-secondary bg-gradient">
     <header>
-      <nav class="navbar navbar-expand-lg mt-3">
+      <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
           <img
             class="imgNav"
@@ -78,8 +78,8 @@
     </header>
 
     <main>
-      <h1 class="text-white fw-light text-center titulo">
-        Estos son los certificados obtenidos hasta la fecha
+      <h1 class="text-white fw-bold text-center titulo">
+        Certificados obtenidos
       </h1>
       <div class="d-flex justify-content-center">
         <div id="carouselExample" class="carousel slide">
