--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -20,7 +20,7 @@
   </head>
   <body class="bg-secondary bg-gradient">
     <header>
-      <nav class="navbar navbar-expand-lg mt-3">
+      <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
           <img
             class="imgNav"
@@ -78,8 +78,8 @@
 
     <main>
       <section class="text-center text-white bg-dark bg-gradient py-3">
-        <h1 class="text-white fw-light text-center titulo">
-          Estas son las herramientas que manejo
+        <h1 class="text-white fw-bold text-center titulo">
+          Hard skills
         </h1>
         <div class="btnSide">
           <button class="btn btn-dark">
@@ -90,7 +90,7 @@
           </button>
         </div>
 
-        <h4 class="fw-bold fst-italic m-3">Básicos</h4>
+        <h2 class="fst-italic fw-light m-3">Frontend</h2>
         <img
           class="iconos"
           alt="HTML 5"
@@ -105,61 +105,10 @@
         />
         <img
           class="iconos"
-          alt="Github"
-          title="Github"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748449/iconos%20tools/github_git_icon_145985_vfzldz.png"
-        />
-        <img
-          class="iconos"
           alt="React JS"
           title="React JS"
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748497/iconos%20tools/react_original_logo_icon_146374_bm5lgl.png"
         />
-        <h4 class="fw-bold fst-italic m-3">Backend</h4>
-        <img
-          class="iconos"
-          alt="Node JS"
-          title="Node JS"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748594/iconos%20tools/file_type_node_icon_130301_swtdjd.png"
-        />
-        <img
-          class="iconos"
-          alt="Postman"
-          title="Postman"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748702/iconos%20tools/postman_macos_bigsur_icon_189815_hua9th.png"
-        />
-        <img
-          class="iconos"
-          alt="Express"
-          title="Express"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748973/iconos%20tools/express_nrck6e.png"
-        />
-        <img
-          class="iconos"
-          alt="Websockets"
-          title="Websockets"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749257/iconos%20tools/pngwing.com_ffhzyy.png"
-        />
-        <h4 class="fw-bold fst-italic m-3">Bases de datos</h4>
-        <img
-          class="iconos"
-          alt="Mongo DB"
-          title="Mongo DB"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749967/iconos%20tools/pngwing.com_4_vhflc8.png"
-        />
-        <img
-          class="iconos"
-          alt="Firebase"
-          title="Firebase"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716750053/iconos%20tools/pngwing.com_5_losolw.png"
-        />
-        <img
-          class="iconos"
-          alt="MySQL"
-          title="MySQL"
-          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1721224355/iconos%20tools/mysql_wwybe7.png"
-        />
-        <h4 class="fw-bold fst-italic m-3">Estilos</h4>
         <img
           class="iconos"
           alt="CSS"
@@ -184,7 +133,59 @@
           title="MUI material"
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749990/iconos%20tools/pngwing.com_3_po0gnz.png"
         />
-        <h4 class="fw-bold fst-italic m-3">Deploys</h4>
+        <h2 class="fw-light fst-italic m-3">Backend</h2>
+        <img
+          class="iconos"
+          alt="Node JS"
+          title="Node JS"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748594/iconos%20tools/file_type_node_icon_130301_swtdjd.png"
+        />
+        <img
+          class="iconos"
+          alt="Postman"
+          title="Postman"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748702/iconos%20tools/postman_macos_bigsur_icon_189815_hua9th.png"
+        />
+        <img
+          class="iconos"
+          alt="Express"
+          title="Express"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748973/iconos%20tools/express_nrck6e.png"
+        />
+        <img
+          class="iconos"
+          alt="Websockets"
+          title="Websockets"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749257/iconos%20tools/pngwing.com_ffhzyy.png"
+        />
+        <h2 class="fw-light fst-italic m-3">Bases de datos</h2>
+        <img
+          class="iconos"
+          alt="Mongo DB"
+          title="Mongo DB"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716749967/iconos%20tools/pngwing.com_4_vhflc8.png"
+        />
+        <img
+          class="iconos"
+          alt="Firebase"
+          title="Firebase"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716750053/iconos%20tools/pngwing.com_5_losolw.png"
+        />
+        <img
+          class="iconos"
+          alt="MySQL"
+          title="MySQL"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1721224355/iconos%20tools/mysql_wwybe7.png"
+        />
+       
+        
+        <h2 class="fw-light fst-italic m-3">Deploys</h2>
+         <img
+          class="iconos"
+          alt="Github"
+          title="Github"
+          src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716748449/iconos%20tools/github_git_icon_145985_vfzldz.png"
+        />
         <img
           class="iconos"
           alt="Railway"
@@ -197,14 +198,14 @@
           title="Vercel"
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716573799/iconos%20tools/vercel_uvbqin.png"
         />
-        <h4 class="fw-bold fst-italic m-3">Documentación</h4>
+        <h2 class="fw-light fst-italic m-3">Documentación</h2>
         <img
           class="iconos"
           alt="Swagger"
           title="Swagger"
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716573798/iconos%20tools/swagger_hwahlu.png"
         />
-        <h4 class="fw-bold fst-italic m-3">Plataformas de pago</h4>
+        <h2 class="fw-light fst-italic m-3">Plataformas de pago</h2>
         <img
           class="iconos mb-5"
           alt="Stripe"
