--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,7 @@
   </head>
   <body class="bg-secondary bg-gradient text-center">
     <header>
-      <nav class="navbar navbar-expand-lg mt-3">
+      <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
           <img
             class="imgNav"
