implementacion de cards, reemplazo con extends

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
     <header>
       <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
-          <img
+            <img
             class="imgNav"
             alt="Logo"
             src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
           />
+          
 
-          <a class="navbar-brand fw-bold" href="#">Mariana Padelin</a>
+          <a class="navbar-brand fw-bold" href="#">
+          
+          Mariana Padelin</a>
           <button
             class="navbar-toggler"
             type="button"
