--- a/pages/about.html
+++ b/pages/about.html
@@ -92,7 +92,7 @@
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
         />
         <div class="fondoParaParrafo">
-          <h1 class="fw-light titulo">Sobre mi</h1>
+          <h1 class="fw-bold titulo">Sobre mi</h1>
           <p class="parrafoDescriptivo">
             Doy clases particulares desde 2014 para el instituto Clases del
             Norte. Específicamente en las materias matemática, física, química y
