--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -87,7 +87,7 @@
           </button>
         </div>
         <h1 class="text-white fw-bold text-center titulo">
-          PROYECTOS REALIZADOS
+          Proyectos Realizados
         </h1>
         <div class="card-container">
           <div class="card">
@@ -114,7 +114,7 @@
                 </button>
               </div>
 
-              <div class="collapse" id="card1">
+              <div class="collapse collapseCardInfo" id="card1">
                 <p class="card-text">
                   Trabajo freelance de front end realizado como única
                   desarrolladora web, en conjunto con diseñadores y UX/UI. A
@@ -168,7 +168,7 @@
                 </button>
               </div>
 
-              <div class="collapse" id="card2">
+              <div class="collapse collapseCardInfo" id="card2">
                 <p class="card-text fondo">
                   Trabajo de e-commerce realizado en primera instancia como
                   proyecto final del curso React JS en coderhouse. Luego
@@ -209,7 +209,7 @@
             <hr>
             <div class="card-body">
               <div class="card-header fw-bold">
-                PROYECTO FREELANCE - CODO A CODO
+                PROYECTO FREELANCE FRONTEND- CODO A CODO
               </div>
               <div class="card-footer">
                 <button
@@ -224,7 +224,7 @@
                 </button>
               </div>
 
-              <div class="collapse" id="card3">
+              <div class="collapse collapseCardInfo" id="card3">
                 <p class="card-text">
                   Trabajo freelance realizado para la agencia CODO A CODO, del
                   gobierno de la ciudad de buenos aires. Maquetación y
