implementacion de SEO

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,14 @@
       href="https://res.cloudinary.com/dvxkjikvk/image/upload/v1725200844/desarrolloWeb/fondos/mobile_pfadb3.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="curriculum de Mariana Padelin, breve historia personal y objetivos profesionales"
+    />
+    <meta
+      name="keywords"
+      content="portfolio, CV, Curriculum, busqueda laboral, fullstack, frontend, backend, developer, desarrollo web, Mariana Padelin, HTML, CSS, SCSS, bootstrap"
+    />
     <title>Sobre mi</title>
 
     <link
@@ -22,14 +30,12 @@
     <header>
       <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
-          <img
-            class="imgNav"
-            alt="Logo"
-            src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
-          />
-
-          <a class="navbar-brand fw-bold" href="../index.html"
-            >Mariana Padelin</a
+          <a class="navbar-brand fw-bold" href="../index.html">
+            <img
+              class="imgNav"
+              alt="Logo"
+              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
+            />Mariana Padelin</a
           >
           <button
             class="navbar-toggler"
