--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -8,6 +8,14 @@
       href="https://res.cloudinary.com/dvxkjikvk/image/upload/v1725200844/desarrolloWeb/fondos/mobile_pfadb3.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Lista de certificados obtenidos por Mariana Padelin en coderhouse y otros establecimientos. Carrera completa de desarrollo fullstack y cursos complementarios."
+    />
+    <meta
+      name="keywords"
+      content="certificados, coderhouse, portfolio, busqueda laboral, fullstack, frontend, backend, developer, desarrollo web, Mariana Padelin, HTML, CSS, SCSS, bootstrap"
+    />
     <title>Estudios</title>
 
     <link
@@ -23,14 +31,12 @@
     <header>
       <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
-          <img
-            class="imgNav"
-            alt="Logo"
-            src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
-          />
-
           <a class="navbar-brand fw-bold" href="../index.html"
-            >Mariana Padelin</a
+            ><img
+              class="imgNav"
+              alt="Logo"
+              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
+            />Mariana Padelin</a
           >
           <button
             class="navbar-toggler"
