--- a/pages/herramientas.html
+++ b/pages/herramientas.html
@@ -8,6 +8,14 @@
       href="https://res.cloudinary.com/dvxkjikvk/image/upload/v1725200844/desarrolloWeb/fondos/mobile_pfadb3.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Listado de herramientas utilizadas por Mariana Padelin cotidianamente para los diferentes proyectos realizados."
+    />
+    <meta
+      name="keywords"
+      content="portfolio, busqueda laboral, fullstack, frontend, backend, developer, desarrollo web, Mariana Padelin, HTML, CSS, SCSS, bootstrap, nodeJS, javascript, SQL, MongoDB, github"
+    />
     <title>Herramientas</title>
 
     <link
@@ -22,14 +30,12 @@
     <header>
       <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
-          <img
-            class="imgNav"
-            alt="Logo"
-            src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
-          />
-
-          <a class="navbar-brand fw-bold" href="../index.html"
-            >Mariana Padelin</a
+          <a class="navbar-brand fw-bold" href="../index.html">
+            <img
+              class="imgNav"
+              alt="Logo"
+              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
+            />Mariana Padelin</a
           >
           <button
             class="navbar-toggler"
@@ -78,9 +84,7 @@
 
     <main>
       <section class="text-center text-white bg-dark bg-gradient py-3">
-        <h1 class="text-white fw-bold text-center titulo">
-          Hard skills
-        </h1>
+        <h1 class="text-white fw-bold text-center titulo">Hard skills</h1>
         <div class="btnSide">
           <button class="btn btn-dark">
             <a href="#">Arriba</a>
@@ -177,10 +181,9 @@
           title="MySQL"
           src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1721224355/iconos%20tools/mysql_wwybe7.png"
         />
-       
-        
+
         <h2 class="fw-light fst-italic m-3">Deploys</h2>
-         <img
+        <img
           class="iconos"
           alt="Github"
           title="Github"
