--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
       href="https://res.cloudinary.com/dvxkjikvk/image/upload/v1725200844/desarrolloWeb/fondos/mobile_pfadb3.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio laboral, que contiene experiencia previa, estudios, breve resumen personal y medios de contacto de Mariana Padelin, para el ámbito de desarrollo fullstack"
+    />
+    <meta
+      name="keywords"
+      content="portfolio, busqueda laboral, fullstack, frontend, backend, developer, desarrollo web, Mariana Padelin, HTML, CSS, SCSS, bootstrap"
+    />
     <title>Portfolio Mariana Padelin</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -25,16 +33,14 @@
     <header>
       <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
-            <img
-            class="imgNav"
-            alt="Logo"
-            src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
-          />
-          
-
           <a class="navbar-brand fw-bold" href="#">
-          
-          Mariana Padelin</a>
+            <img
+              class="imgNav"
+              alt="Logo"
+              src="https://res.cloudinary.com/dvxkjikvk/image/upload/v1716212310/foto_de_perfil_xot1ub.jpg"
+            />
+            Mariana Padelin</a
+          >
           <button
             class="navbar-toggler"
             type="button"
